--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,18 +1,452 @@
 name: uc_uvva
 channels:
+  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - conda
-  - python=3.9
-  - conda-env
-  - conda-build
-  - conda-verify
-  - _ipyw_jlab_nb_ext_conf
-  - anaconda==2021.11=py39_0
-  - anaconda-navigator
-  - navigator-updater
-  - astroquery
-  - healpy
-  - ipympl
-  - python-dotenv
+  - _anaconda_depends=2021.11=py39_0
+  - _ipyw_jlab_nb_ext_conf=0.1.0=py39h06a4308_0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_llvm
+  - alabaster=0.7.12=py_0
+  - anaconda=custom=py39_1
+  - anaconda-client=1.8.0=pyhd8ed1ab_0
+  - anaconda-navigator=2.1.1=py39_0
+  - anaconda-project=0.10.2=pyhd8ed1ab_0
+  - anyio=3.5.0=py39hf3d152e_0
+  - appdirs=1.4.4=pyh9f0ad1d_0
+  - argh=0.26.2=pyh9f0ad1d_1002
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py39h3811e60_1
+  - arrow=1.2.1=pyhd8ed1ab_0
+  - asn1crypto=1.4.0=pyh9f0ad1d_0
+  - astroid=2.9.2=py39hf3d152e_0
+  - astropy=5.0=py39hce5d2b2_0
+  - astroquery=0.4.5=pyhd8ed1ab_0
+  - async_generator=1.10=py_0
+  - atomicwrites=1.4.0=pyh9f0ad1d_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - autopep8=1.6.0=pyhd8ed1ab_1
+  - babel=2.9.1=pyh44b312d_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - backports.shutil_get_terminal_size=1.0.0=py_3
+  - beautifulsoup4=4.10.0=pyha770c72_0
+  - binaryornot=0.4.4=py_1
+  - bitarray=2.3.5=py39h3811e60_0
+  - bkcharts=0.2=py39h06a4308_0
+  - black=21.12b0=pyhd8ed1ab_0
+  - blas=2.3=openblas
+  - bleach=4.1.0=pyhd8ed1ab_0
+  - blosc=1.21.0=h9c3ff4c_0
+  - bokeh=2.4.2=py39hf3d152e_0
+  - boto=2.49.0=py_0
+  - bottleneck=1.3.2=py39hce5d2b2_5
+  - brotli=1.0.9=h7f98852_6
+  - brotli-bin=1.0.9=h7f98852_6
+  - brotlipy=0.7.0=py39h3811e60_1003
+  - brunsli=0.1=h9c3ff4c_0
+  - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f98852_0
+  - ca-certificates=2020.10.14=0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.16.0=h18b612c_1001
+  - certifi=2021.10.8=py39hf3d152e_1
+  - cffi=1.15.0=py39h4bc2ebd_0
+  - cfitsio=3.470=h2e3daa1_7
+  - chardet=4.0.0=py39hf3d152e_2
+  - charls=2.2.0=h9c3ff4c_0
+  - charset-normalizer=2.0.10=pyhd8ed1ab_0
+  - click=8.0.3=py39hf3d152e_1
+  - cloudpickle=2.0.0=pyhd8ed1ab_0
+  - clyent=1.2.2=py_1
+  - colorama=0.4.4=pyh9f0ad1d_0
+  - conda=4.11.0=py39hf3d152e_0
+  - conda-build=3.21.7=py39hf3d152e_0
+  - conda-content-trust=0.1.3=pyhd8ed1ab_0
+  - conda-env=2.6.0=1
+  - conda-pack=0.6.0=pyhd3deb0d_0
+  - conda-package-handling=1.7.3=py39h3811e60_1
+  - conda-repo-cli=1.0.4=pyhd3eb1b0_0
+  - conda-token=0.3.0=pyhd3eb1b0_0
+  - conda-verify=3.1.1=py39hf3d152e_1004
+  - contextlib2=21.6.0=pyhd8ed1ab_0
+  - cookiecutter=1.7.3=pyh6c4a22f_0
+  - cryptography=36.0.1=py39h95dcef6_0
+  - curl=7.81.0=h2574ce0_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - cython=0.29.26=py39he80948d_0
+  - cytoolz=0.11.2=py39h3811e60_1
+  - daal4py=2021.4.0=py39h78b71dc_0
+  - dal=2021.4.0=ha770c72_729
+  - dask=2021.12.0=pyhd8ed1ab_0
+  - dask-core=2021.12.0=pyhd8ed1ab_0
+  - dataclasses=0.8=pyhc8e2a94_3
+  - dbus=1.13.6=h5008d03_3
+  - debugpy=1.5.1=py39he80948d_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - diff-match-patch=20200713=pyh9f0ad1d_0
+  - distributed=2021.12.0=py39hf3d152e_0
+  - docutils=0.16=py39hf3d152e_3
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - et_xmlfile=1.0.1=py_1001
+  - expat=2.4.2=h9c3ff4c_0
+  - fastcache=1.1.0=py39h3811e60_3
+  - filelock=3.4.2=pyhd8ed1ab_1
+  - flake8=4.0.1=pyhd8ed1ab_0
+  - flask=1.0.3=py_0
+  - flit-core=3.6.0=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.13.1=hba837de_1005
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.28.5=py39h3811e60_0
+  - freetype=2.10.4=h0708190_1
+  - fribidi=1.0.10=h36c2ea0_0
+  - fsspec=2022.1.0=pyhd8ed1ab_0
+  - future=0.18.2=py39hf3d152e_4
+  - get_terminal_size=1.0.0=haa9412d_0
+  - gettext=0.19.8.1=h73d1719_1008
+  - gevent=21.12.0=py39h3811e60_0
+  - giflib=5.2.1=h36c2ea0_2
+  - glib=2.70.2=h780b84a_1
+  - glib-tools=2.70.2=h780b84a_1
+  - glob2=0.7=py_0
+  - gmp=6.2.1=h58526e2_0
+  - gmpy2=2.1.2=py39h78fa15d_0
+  - graphite2=1.3.14=h23475e2_0
+  - greenlet=1.1.2=py39he80948d_1
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=h28cd5cc_2
+  - h5py=3.2.1=nompi_py39h98ba4bc_100
+  - harfbuzz=3.1.2=h6b1f951_0
+  - hdf5=1.10.6=nompi_h7c3c948_1111
+  - healpy=1.14.0=py39h6a92074_2
+  - heapdict=1.0.1=py_0
+  - html5lib=1.1=pyh9f0ad1d_0
+  - icu=58.2=hf484d3e_1000
+  - idna=3.1=pyhd3deb0d_0
+  - imagecodecs=2021.8.26=py39h4cda21f_0
+  - imageio=2.3.0=py_1
+  - imagesize=1.3.0=pyhd8ed1ab_0
+  - importlib-metadata=4.10.0=py39hf3d152e_0
+  - importlib_metadata=4.10.0=hd8ed1ab_0
+  - importlib_resources=5.4.0=pyhd8ed1ab_0
+  - inflection=0.5.1=pyh9f0ad1d_0
+  - iniconfig=1.1.1=pyh9f0ad1d_0
+  - intel-openmp=2021.4.0=h06a4308_3561
+  - intervaltree=3.0.2=py_0
+  - ipykernel=6.7.0=py39hef51801_0
+  - ipympl=0.8.5=pyhd8ed1ab_0
+  - ipython=7.31.0=py39hf3d152e_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.6.5=pyhd8ed1ab_0
+  - isort=5.10.1=pyhd8ed1ab_0
+  - itsdangerous=2.0.1=pyhd8ed1ab_0
+  - jbig=2.1=h7f98852_2003
+  - jdcal=1.4.1=py_0
+  - jedi=0.18.1=py39hf3d152e_0
+  - jeepney=0.7.1=pyhd8ed1ab_0
+  - jellyfish=0.9.0=py39h3811e60_0
+  - jinja2=2.11.3=pyh44b312d_0
+  - jinja2-time=0.2.0=py_2
+  - joblib=1.1.0=pyhd8ed1ab_0
+  - jpeg=9d=h36c2ea0_0
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=4.4.0=pyhd8ed1ab_0
+  - jupyter=1.0.0=py39hf3d152e_7
+  - jupyter_client=7.1.0=pyhd8ed1ab_0
+  - jupyter_console=6.4.0=pyhd8ed1ab_0
+  - jupyter_core=4.9.1=py39hf3d152e_1
+  - jupyter_server=1.13.2=pyhd8ed1ab_0
+  - jupyterlab=3.2.8=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_server=2.10.3=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.0.2=pyhd8ed1ab_0
+  - jxrlib=1.1=h7f98852_2
+  - keyring=23.4.0=py39hf3d152e_0
+  - kiwisolver=1.3.2=py39h1a9c180_1
+  - krb5=1.19.2=hcc1bbae_3
+  - lazy-object-proxy=1.7.1=py39h3811e60_0
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
+  - libaec=1.0.6=h9c3ff4c_0
+  - libarchive=3.4.2=h62408e4_0
+  - libblas=3.9.0=3_openblas
+  - libbrotlicommon=1.0.9=h7f98852_6
+  - libbrotlidec=1.0.9=h7f98852_6
+  - libbrotlienc=1.0.9=h7f98852_6
+  - libcblas=3.9.0=3_openblas
+  - libcurl=7.81.0=h2574ce0_0
+  - libdeflate=1.8=h7f98852_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-ng=11.2.0=h1d223b6_11
+  - libgfortran-ng=7.5.0=h14aa051_19
+  - libgfortran4=7.5.0=h14aa051_19
+  - libglib=2.70.2=h174f98d_1
+  - libgomp=11.2.0=h1d223b6_11
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.9.0=3_openblas
+  - liblapacke=3.9.0=3_openblas
+  - liblief=0.11.5=h9c3ff4c_1
+  - libllvm11=11.1.0=hf817b99_2
+  - libnghttp2=1.43.0=h812cca2_1
+  - libnsl=2.0.0=h7f98852_0
+  - libopenblas=0.3.12=pthreads_hb3c22a3_1
+  - libpng=1.6.37=h21135ba_2
+  - libsodium=1.0.18=h36c2ea0_1
+  - libspatialindex=1.9.3=h9c3ff4c_4
+  - libssh2=1.10.0=ha56f1ee_2
+  - libstdcxx-ng=11.2.0=he4da1e4_11
+  - libtiff=4.2.0=h85742a9_0
+  - libtool=2.4.6=h9c3ff4c_1008
+  - libuuid=2.32.1=h7f98852_1000
+  - libuv=1.43.0=h7f98852_0
+  - libwebp=1.2.0=h89dd481_0
+  - libwebp-base=1.2.0=h27cfd23_0
+  - libxcb=1.13=h7f98852_1004
+  - libxml2=2.9.12=h03d6c58_0
+  - libxslt=1.1.34=hc22bd24_0
+  - libzlib=1.2.11=h36c2ea0_1013
+  - libzopfli=1.0.3=h9c3ff4c_0
+  - llvm-openmp=12.0.1=h4bd325d_1
+  - llvmlite=0.37.0=py39h1bbdace_1
+  - locket=0.2.0=py_2
+  - loguru=0.5.3=py39hf3d152e_3
+  - lxml=4.7.1=py39h107f48f_0
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - lzo=2.10=h516909a_1000
+  - markupsafe=1.1.1=py39h3811e60_3
+  - matplotlib=3.5.1=py39hf3d152e_0
+  - matplotlib-base=3.5.1=py39h2fa2bec_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mccabe=0.6.1=py_1
+  - mistune=0.8.4=py39h3811e60_1005
+  - mkl=2021.4.0=h8d4b97c_729
+  - mkl-service=2.4.0=py39h7e14d7c_0
+  - mkl_fft=1.3.1=py39h0c7bc48_1
+  - mkl_random=1.2.2=py39hde0f152_0
+  - mock=4.0.3=py39hf3d152e_2
+  - more-itertools=8.12.0=pyhd8ed1ab_0
+  - mpc=1.2.1=h9f54685_0
+  - mpfr=4.1.0=h9202a9a_1
+  - mpi=1.0=mpich
+  - mpich=3.3.2=hc856adb_0
+  - mpmath=1.2.1=pyhd8ed1ab_0
+  - msgpack-python=1.0.3=py39h1a9c180_0
+  - multipledispatch=0.6.0=py_0
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mypy_extensions=0.4.3=py39hf3d152e_4
+  - navigator-updater=0.2.1=py39_1
+  - nbclassic=0.3.5=pyhd8ed1ab_0
+  - nbclient=0.5.10=pyhd8ed1ab_0
+  - nbconvert=6.4.0=py39hf3d152e_0
+  - nbformat=5.1.3=pyhd8ed1ab_0
+  - ncurses=6.2=h58526e2_4
+  - nest-asyncio=1.5.4=pyhd8ed1ab_0
+  - networkx=2.6.3=pyhd8ed1ab_1
+  - nltk=3.6.7=pyhd8ed1ab_0
+  - nose=1.3.7=py_1006
+  - notebook=6.4.7=pyha770c72_0
+  - numba=0.54.1=py39h56b8d98_0
+  - numexpr=2.8.1=py39hecfb737_0
+  - numpy=1.20.3=py39h3dbb7de_0
+  - numpy-base=1.20.3=py39h39b7dee_0
+  - numpydoc=1.1.0=py_1
+  - olefile=0.46=pyh9f0ad1d_1
+  - openjpeg=2.4.0=hb52868f_1
+  - openpyxl=3.0.9=pyhd8ed1ab_0
+  - openssl=1.1.1l=h7f98852_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.3.5=py39hde0f152_0
+  - pandoc=2.17=h7f98852_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - pango=1.48.10=h54213e6_2
+  - parso=0.8.3=pyhd8ed1ab_0
+  - partd=1.2.0=pyhd8ed1ab_0
+  - patchelf=0.14.3=h58526e2_0
+  - path=16.3.0=py39hf3d152e_0
+  - path.py=12.5.0=0
+  - pathlib2=2.3.6=py39hf3d152e_1
+  - pathspec=0.9.0=pyhd8ed1ab_0
+  - patsy=0.5.2=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
+  - pep8=1.7.1=py_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=7.2.0=py39h6f3857e_2
+  - pip=21.3.1=pyhd8ed1ab_0
+  - pixman=0.38.0=h516909a_1003
+  - pkginfo=1.8.2=pyhd8ed1ab_0
+  - platformdirs=2.3.0=pyhd8ed1ab_0
+  - pluggy=1.0.0=py39hf3d152e_2
+  - ply=3.11=py_1
+  - poyo=0.5.0=py_0
+  - prometheus_client=0.12.0=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.24=pyha770c72_0
+  - prompt_toolkit=3.0.24=hd8ed1ab_0
+  - psutil=5.9.0=py39h3811e60_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - py=1.11.0=pyh6c4a22f_0
+  - py-lief=0.11.5=py39he80948d_1
+  - pycodestyle=2.8.0=pyhd8ed1ab_0
+  - pycosat=0.6.3=py39h3811e60_1009
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pycurl=7.44.1=py39h72e3413_1
+  - pydocstyle=6.1.1=pyhd8ed1ab_0
+  - pyerfa=2.0.0.1=py39hce5d2b2_1
+  - pyflakes=2.4.0=pyhd8ed1ab_0
+  - pygments=2.11.2=pyhd8ed1ab_0
+  - pyjwt=2.3.0=pyhd8ed1ab_1
+  - pylint=2.12.2=pyhd8ed1ab_0
+  - pyls-spyder=0.4.0=pyhd8ed1ab_0
+  - pyodbc=4.0.32=py39he80948d_1
+  - pyopenssl=21.0.0=pyhd8ed1ab_0
+  - pyparsing=3.0.6=pyhd8ed1ab_0
+  - pyqt=5.9.2=py39h2531618_6
+  - pyrsistent=0.18.0=py39h3811e60_0
+  - pysocks=1.7.1=py39hf3d152e_4
+  - pytables=3.6.1=py39hf6dc253_3
+  - pytest=6.2.5=py39hf3d152e_2
+  - pytest-runner=5.3.1=pyhd8ed1ab_0
+  - python=3.9.9=h62f1059_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-dotenv=0.19.2=pyhd8ed1ab_0
+  - python-libarchive-c=3.2=py39hf3d152e_0
+  - python-lsp-black=1.0.1=pyhd8ed1ab_0
+  - python-lsp-jsonrpc=1.0.0=pyhd8ed1ab_0
+  - python-lsp-server=1.3.3=pyhd8ed1ab_0
+  - python-mimeparse=1.6.0=py_1
+  - python-slugify=5.0.2=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pytz=2021.3=pyhd8ed1ab_0
+  - pyvo=1.2.1=pyhd8ed1ab_0
+  - pywavelets=1.2.0=py39hce5d2b2_1
+  - pyxdg=0.27=pyhd8ed1ab_0
+  - pyyaml=6.0=py39h3811e60_3
+  - pyzmq=22.3.0=py39h37b5a0c_1
+  - qdarkstyle=3.0.2=pyhd3eb1b0_0
+  - qstylizer=0.2.1=pyhd8ed1ab_0
+  - qt=5.9.7=h5867ecd_1
+  - qtawesome=1.1.1=pyhd8ed1ab_0
+  - qtconsole=5.2.2=pyhd8ed1ab_1
+  - qtconsole-base=5.2.2=pyhd8ed1ab_1
+  - qtpy=2.0.0=pyhd8ed1ab_0
+  - readline=8.1=h46c0cb4_0
+  - regex=2021.11.10=py39h3811e60_0
+  - requests=2.27.1=pyhd8ed1ab_0
+  - ripgrep=13.0.0=habb4d0f_1
+  - rope=0.22.0=pyhd8ed1ab_0
+  - rtree=0.9.7=py39hb102c33_3
+  - ruamel_yaml=0.15.80=py39h3811e60_1006
+  - scikit-image=0.19.1=py39hde0f152_0
+  - scikit-learn=1.0.2=py39h4dfa638_0
+  - scikit-learn-intelex=2021.4.0=py39hf3d152e_0
+  - scipy=1.5.3=py39hf3f25e7_0
+  - seaborn=0.11.2=hd8ed1ab_0
+  - seaborn-base=0.11.2=pyhd8ed1ab_0
+  - secretstorage=3.3.1=py39hf3d152e_1
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=60.5.0=py39hf3d152e_0
+  - simplegeneric=0.8.1=py_1
+  - singledispatch=3.6.1=pyh44b312d_0
+  - sip=4.19.13=py39h2531618_0
+  - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.1.8=he1b5a44_3
+  - sniffio=1.2.0=py39hf3d152e_2
+  - snowballstemmer=2.2.0=pyhd8ed1ab_0
+  - sortedcollections=2.1.0=pyhd8ed1ab_0
+  - sortedcontainers=2.4.0=pyhd8ed1ab_0
+  - soupsieve=2.3.1=pyhd8ed1ab_0
+  - sphinx=4.3.2=pyh6c4a22f_0
+  - sphinx_rtd_theme=0.4.3=py_0
+  - sphinxcontrib=1.0=py39h06a4308_1
+  - sphinxcontrib-applehelp=1.0.2=py_0
+  - sphinxcontrib-devhelp=1.0.2=py_0
+  - sphinxcontrib-htmlhelp=2.0.0=pyhd8ed1ab_0
+  - sphinxcontrib-jsmath=1.0.1=py_0
+  - sphinxcontrib-qthelp=1.0.3=py_0
+  - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_1
+  - sphinxcontrib-websupport=1.2.4=pyhd8ed1ab_1
+  - spyder=5.2.1=py39hf3d152e_1
+  - spyder-kernels=2.2.1=py39hf3d152e_0
+  - spyder-notebook=0.1.4=py_0
+  - sqlalchemy=1.4.29=py39h3811e60_0
+  - sqlite=3.37.0=h9cd32fc_0
+  - statsmodels=0.13.1=py39hce5d2b2_0
+  - sympy=1.9=py39hf3d152e_1
+  - tbb=2021.5.0=h4bd325d_0
+  - tbb4py=2021.5.0=py39ha765c23_0
+  - tblib=1.7.0=pyhd8ed1ab_0
+  - terminado=0.12.1=py39hf3d152e_1
+  - testpath=0.5.0=pyhd8ed1ab_0
+  - text-unidecode=1.3=py_0
+  - textdistance=4.2.2=pyhd8ed1ab_0
+  - threadpoolctl=3.0.0=pyh8a188c0_0
+  - three-merge=0.1.1=pyh9f0ad1d_0
+  - tifffile=2021.11.2=pyhd8ed1ab_0
+  - tinycss=0.4=pyhd8ed1ab_1002
+  - tinycss2=1.1.1=pyhd8ed1ab_0
+  - tk=8.6.11=h27826a3_1
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=1.2.2=pyhd8ed1ab_0
+  - toolz=0.11.2=pyhd8ed1ab_0
+  - tornado=6.1=py39h3811e60_2
+  - tqdm=4.62.3=pyhd8ed1ab_0
+  - traitlets=5.1.1=pyhd8ed1ab_0
+  - typed-ast=1.5.1=py39h3811e60_0
+  - typing-extensions=4.0.1=hd8ed1ab_0
+  - typing_extensions=4.0.1=pyha770c72_0
+  - tzdata=2021e=he74cb21_0
+  - ujson=5.1.0=py39he80948d_0
+  - unicodecsv=0.14.1=py_1
+  - unidecode=1.3.2=pyhd8ed1ab_0
+  - unixodbc=2.3.9=hb166930_0
+  - urllib3=1.26.8=pyhd8ed1ab_1
+  - watchdog=2.1.6=py39hf3d152e_1
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - websocket-client=1.2.3=pyhd8ed1ab_0
+  - werkzeug=2.0.1=pyhd8ed1ab_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - whichcraft=0.6.1=py_0
+  - widgetsnbextension=3.5.2=py39hf3d152e_1
+  - wrapt=1.13.3=py39h3811e60_1
+  - wurlitzer=3.0.2=py39hf3d152e_1
+  - xlrd=2.0.1=pyhd8ed1ab_3
+  - xlsxwriter=3.0.2=pyhd8ed1ab_0
+  - xlwt=1.3.0=py_1
+  - xmltodict=0.12.0=py_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.7.2=h7f98852_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
+  - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h7f98852_2
+  - yapf=0.32.0=pyhd8ed1ab_0
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zfp=0.5.5=h9c3ff4c_8
+  - zict=2.0.0=py_0
+  - zipp=3.7.0=pyhd8ed1ab_0
+  - zlib=1.2.11=h36c2ea0_1013
+  - zope=1.0=py39h06a4308_1
+  - zope.event=4.5.0=pyh9f0ad1d_0
+  - zope.interface=5.4.0=py39h3811e60_1
+  - zstd=1.4.9=ha95c52a_0
