implemented full-featured test for GALEXField

--- a/.env_template
+++ b/.env_template
@@ -3,3 +3,6 @@ UC_SAS_UVVARCAT="local_path/to/synced/sas/cloud/folders/uvvarcat"
 
 # Place holder for future use of the LUSTRE storage system
 UC_LUSTRE_UVVARCAT="/dev/null"
+
+# UVVA testing resources
+UC_UVVA_TEST_RESOURCES = "."
