Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,4 +4,5 @@ standalone-install-test:
     - pip install --upgrade pip
     - pip install -r requirements.txt
     - pip install .
+    - echo "UC_SAS_UVVARCAT='/dev/null'\nUC_LUSTRE_UVVARCAT='/dev/null'\nUC_UVVA_TEST_RESOURCES='.' > .env"
     - pytest
