--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,4 +5,9 @@ standalone-install-test:
     - pip install -r requirements.txt
     - pip install .
     - echo "UC_SAS_UVVARCAT='/dev/null'\nUC_LUSTRE_UVVARCAT='/dev/null'\nUC_UVVA_TEST_RESOURCES='.' > .env"
+    - pwd
+    - ls -a
+    - cat .env
+    - echo "UC_SAS_UVVARCAT='/dev/null'\nUC_LUSTRE_UVVARCAT='/dev/null'\nUC_UVVA_TEST_RESOURCES='.' > /builds/ultrasat-camera/uc_uvva/uvva/../.env"
+    - cat /builds/ultrasat-camera/uc_uvva/uvva/../.env
     - pytest
