--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ uvva.egg-info
 uvva/test/default_field.fits
 uvva/test/field_default.fits
 uvva/myscripts/
-/development/*
+development/*
 *.fits
+!uvva/test/resources/**/*.fits
