--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,25 +17,25 @@ authors = [
     {name = "Andrea Porelli"},
 ]
 dependencies = [
-  "astropy~=5.0.2",
-  "astroquery~=0.4.6",
-  "coverage~=6.3.2",
-  "healpy~=1.15.2",
-  "loguru~=0.6.0",
-  "matplotlib~=3.5.1",
-  "numpy~=1.22.3",
-  "pandas~=1.4.1",
-  "pytest~=7.1.1",
-  "python-dotenv~=0.19.2",
-  "PyYAML~=6.0",
-  "scikit_learn~=1.0.2",
-  "setuptools~=58.0.4",
+  "astropy ~= 5.0.2",
+  "astroquery ~= 0.4.6",
+  "coverage ~= 6.3.2",
+  "healpy ~= 1.15.2",
+  "loguru ~= 0.6.0",
+  "matplotlib ~= 3.5.1",
+  "numpy ~= 1.22.3",
+  "pandas ~= 1.4.1",
+  "pytest ~= 7.1.1",
+  "python-dotenv ~= 0.19.2",
+  "PyYAML ~= 6.0",
+  "scikit_learn ~= 1.0.2",
+  "setuptools ~= 58.0.4",
 ]
 
 [project.optional-dependencies]
 jupyter = [
-    "jupyter-client<7, >=5.3.4",
-    "ipympl~=0.8.0, <0.8.8,",
+    "jupyter-client < 7, >= 5.3.4",
+    "ipympl >= 0.8.0, < 0.8.8,",
 ]
 docs = [
     "spinx",
