--- a/uvva/uvva_cfg.yaml
+++ b/uvva/uvva_cfg.yaml
@@ -11,9 +11,9 @@ general:
 
 cluster:
     meanshift:
-        bandwidth     : null
+        bandwidth     : null               # In arcsec, to estimate it automatically specify "null"
         seeds         : null
-        bin_seeding   : false
+        bin_seeding   : true
         min_bin_freq  : 1
         cluster_all   : true
         n_jobs        : 4
