Update test_field.py and uvva_test_cfg.yaml

--- a/uvva/test/uvva_test_cfg.yaml
+++ b/uvva/test/uvva_test_cfg.yaml
@@ -4,7 +4,7 @@ comment : "Test configuration file"
 
 general:
     name          : "test_region"
-    out_dir       : "./out_pipe"                               # If "CWD" current work directory will be used
+    out_dir       : "./uvva/test/out_pipe"                               # If "CWD" current work directory will be used
     log_level     : "DEBUG"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file      : "uvva.log"                                 # Will be written into "out_dir"
     data_source   : "MAST"                                     # Either "MAST" (cached or online) or "UVVA"
