Update field.py, uvva_test_cfg.yaml, and 2 more files... Added selection.

--- a/uvva/test/resources/uvva_test_cfg.yaml
+++ b/uvva/test/resources/uvva_test_cfg.yaml
@@ -25,6 +25,10 @@ observations:
     field_ids :
         - 6388191295067652096
 
+selection:
+    detections:
+        s2n: [4,.inf] 
+        
 # Optional, observatory-specific configuration of the field initialization. See docs for a complete list of config arguments.
 ressources:                      
     load_method: "MAST"     # Allowed are ["MAST", "UVVA", "AUTO"]
