Update field.py, uvva_test_cfg.yaml, and uvva_cfg.yaml

--- a/uvva/test/resources/uvva_test_cfg.yaml
+++ b/uvva/test/resources/uvva_test_cfg.yaml
@@ -33,8 +33,8 @@ selection:
 ressources:                      
     load_method: "MAST"     # Allowed are ["MAST", "UVVA", "AUTO"]
     load_kwargs:
-        refresh: False
-        load_products: True
+        refresh: false
+        load_products: true
         data_path: null
         visits_data_path: null            
 
