--- a/uvva/test/resources/uvva_test_cfg.yaml
+++ b/uvva/test/resources/uvva_test_cfg.yaml
@@ -27,7 +27,16 @@ observations:
 
 selection:
     detections:
-        s2n: [4,.inf] 
+        range:
+            s2n            : [4,.inf]
+            r_fov          : [0.0,0.5]
+            point_src_prob : [0.95,1.0]
+            bright_match   : [-0.5,0.5]
+            mag            : [14,26]
+            mag_err        : [0,0.5]
+        bitmask:
+            # Specify the ones to ignore (=keep row).
+            artifacts : [1,8,16,32,64,128,256,512]   
         
 # Optional, observatory-specific configuration of the field initialization. See docs for a complete list of config arguments.
 ressources:                      
