--- a/uvva/test/resources/uvva_test_cfg.yaml
+++ b/uvva/test/resources/uvva_test_cfg.yaml
@@ -4,7 +4,7 @@ comment : "Test configuration file"
 
 general:
     name          : "test_region"
-    out_dir       : "./uvva/test/out_pipe"                               # If "CWD" current work directory will be used
+    out_dir_base  : "./uvva/test/out_pipe"                               # If "CWD" current work directory will be used
     log_level     : "DEBUG"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file      : "uvva.log"                                 # Will be written into "out_dir"
 
