--- a/uvva/uvva_cfg.yaml
+++ b/uvva/uvva_cfg.yaml
@@ -5,13 +5,25 @@ comment : "Example configuration file"
 general:
     name          : "TDS_COSMOS"
     out_dir_base  : "./examples/uvva_pipeline"                 # If "CWD" current work directory will be used.
-    log_level     : "DEBUG"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
+    log_level     : "INFO"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file      : "uvva.log"                                 # Will be written into "out_dir"
-    data_source   : "MAST"                                     # Either "MAST" (cached or online) or "UVVA"
+    hd_img_out    : true                                       # Write out high definition images
 
+observations:
+    observatory : "GALEX"
+    obs_filter : "NUV"
+    field_ids :
+        - 2604912508670050304
+        - 2604982877414227968
+        - 2605053246158405632
+        - 2605123614902583296
+        - 2605193983646760960
+        - 2605264352416104448
+        - 2605334721135116288
+        
 cluster:
     meanshift:
-        bandwidth     : 6               # In arcsec, to estimate it automatically specify "null"
+        bandwidth     : 5               # In arcsec, to estimate it automatically specify "null"
         seeds         : null
         bin_seeding   : false
         min_bin_freq  : 1
@@ -33,20 +45,11 @@ selection:
             # Specify the ones to ignore (=keep row).
             # For GALEX a description is at the end of this document
             artifacts : [1,8,16,32,64,128,256,512]    
-        
-        
-observations:
-    observatory : "GALEX"
-    obs_filter : "NUV"
-    field_ids :
-        - 2604912508670050304
-        - 2604982877414227968
 
 ressources:                      
-    load_method: "MAST"     # Allowed are ["MAST", "UVVA", "AUTO"]
-    load_kwargs:
-        refresh          : false
-        load_products    : true
+    load_method      : "UVVA"     # Allowed are ["MAST_SERVER", "MAST_CLOUD", "UVVA", "AUTO"]
+    load_products    : true             # Get data products from MAST, if false only meta data is loaded
+    field_kwargs:
         data_path        : null
         visits_data_path : null   
 
