--- a/uvva/uvva_cfg.yaml
+++ b/uvva/uvva_cfg.yaml
@@ -16,11 +16,11 @@ observations:
     field_ids :
         - 2604912508670050304
         - 2604982877414227968
-        - 2605053246158405632
-        - 2605123614902583296
-        - 2605193983646760960
-        - 2605264352416104448
-        - 2605334721135116288
+        # - 2605053246158405632
+        # - 2605123614902583296
+        # - 2605193983646760960
+        # - 2605264352416104448
+        # - 2605334721135116288
         
 cluster:
     meanshift:
@@ -34,7 +34,9 @@ cluster:
     add_upper_limits  : true
 
 selection:
-    detections:
+    det_quality:
+        table    : "tt_detections"
+        sel_type : "and"  # These are all AND selections
         range:
             s2n            : [4,.inf]
             r_fov          : [0.0,0.5]
@@ -45,7 +47,20 @@ selection:
         bitmask:
             # Specify the ones to ignore (=keep row).
             # For GALEX a description is at the end of this document
-            artifacts : [1,8,16,32,64,128,256,512]    
+            artifacts : [1,8,16,32,64,128,256,512]
+    src_quality:
+        table    : "tt_sources"
+        sel_type : "and"    # These are OR selections
+        range:
+            nr_det          : [1,.inf]
+            nr_det_meas     : [1,.inf]            
+    src_variability:
+        table    : "tt_sources"
+        sel_type : "or"
+        range:        
+            mag_rchiq       : [0.1,.inf]
+            mag_delta_max   : [0.05,.inf]
+            nr_ul_mean      : [1,.inf]
 
 ressources:                      
     load_method      : "UVVA"     # Allowed are ["MAST_SERVER", "MAST_CLOUD", "UVVA", "AUTO"]
