--- a/uvva/test/resources/uvva_test_cfg.yaml
+++ b/uvva/test/resources/uvva_test_cfg.yaml
@@ -34,26 +34,29 @@ selection:
         sel_type : "and"  # These are all AND selections
         range:
             s2n            : [4,.inf]
-            r_fov          : [0.0,0.5]
+            r_fov          : [0.0,0.55]
             point_src_prob : [0.95,1.0]
             bright_match   : [-0.5,0.5]
-            mag            : [14,26]
+            mag            : [18,26]
             mag_err        : [0,0.5]
         bitmask:
+            # Specify the ones to ignore (=keep row).
+            # For GALEX a description is at the end of this document
             artifacts : [1,8,16,32,64,128,256,512]
     src_quality:
         table    : "tt_sources"
         sel_type : "and"    # These are OR selections
         range:
-            nr_det          : [1,.inf]
-            nr_det_meas     : [1,.inf]            
+            nr_det        : [1,.inf]
+            nr_det_meas   : [1,.inf]            
     src_variability:
         table    : "tt_sources"
         sel_type : "or"
         range:        
-            mag_rchiq       : [0.1,.inf]
-            mag_delta_max   : [0.05,.inf]
-            nr_ul_mean      : [1,.inf]  
+            mag_rchiq     : [1.0,.inf]
+            mag_dmax      : [0.2,.inf]
+            mag_dmax_sig  : [5.0,.inf]
+            nr_ul_mean    : [1,.inf]
 
 ressources:                      
     load_method      : "MAST_LOCAL"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "UVVA", "AUTO"]
