--- a/uvva/uvva_cfg.yaml
+++ b/uvva/uvva_cfg.yaml
@@ -39,10 +39,10 @@ selection:
         sel_type : "and"  # These are all AND selections
         range:
             s2n            : [4,.inf]
-            r_fov          : [0.0,0.5]
+            r_fov          : [0.0,0.55]
             point_src_prob : [0.95,1.0]
             bright_match   : [-0.5,0.5]
-            mag            : [14,26]
+            mag            : [18,26]
             mag_err        : [0,0.5]
         bitmask:
             # Specify the ones to ignore (=keep row).
@@ -52,15 +52,16 @@ selection:
         table    : "tt_sources"
         sel_type : "and"    # These are OR selections
         range:
-            nr_det          : [1,.inf]
-            nr_det_meas     : [1,.inf]            
+            nr_det        : [1,.inf]
+            nr_det_meas   : [1,.inf]            
     src_variability:
         table    : "tt_sources"
         sel_type : "or"
         range:        
-            mag_rchiq       : [0.1,.inf]
-            mag_delta_max   : [0.05,.inf]
-            nr_ul_mean      : [1,.inf]
+            mag_rchiq     : [1.0,.inf]
+            mag_dmax      : [0.2,.inf]
+            mag_dmax_sig  : [5.0,.inf]
+            nr_ul_mean    : [1,.inf]
 
 ressources:                      
     load_method      : "UVVA"     # Allowed are ["MAST_SERVER", "MAST_CLOUD", "UVVA", "AUTO"]
