--- a/uvva/uvva_cfg.yaml
+++ b/uvva/uvva_cfg.yaml
@@ -3,25 +3,25 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name          : "TDS_COSMOS"
-    out_dir_base  : "./examples/uvva_pipeline"                 # If "CWD" current work directory will be used.
-    log_level     : "INFO"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
-    log_file      : "uvva.log"                                 # Will be written into "out_dir"
-    hd_img_out    : true                                      # Write out high definition images
-    nr_cpus       : null                                       #Number of CPUs to use. If "null" all available are used.
+    name            : "TDS_COSMOS"
+    out_dir_base    : "./examples/uvva_pipeline"                 # If "CWD" current work directory will be used.
+    log_level       : "INFO"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
+    log_file        : "uvva.log"                                 # Will be written into "out_dir"
+    hd_img_out      : true                                      # Write out high definition images
+    nr_cpus         : 4                                       #Number of CPUs to use. If "null" all available are used.
 
 observations:
     observatory : "GALEX"
     obs_filter : "NUV"
     field_ids :
-        - 6388191295067652096
-        # - 2604912508670050304
-        # - 2604982877414227968
-        # - 2605053246158405632
-        # - 2605123614902583296
-        # - 2605193983646760960
-        # - 2605264352416104448
-        # - 2605334721135116288
+#        - 6388191295067652096
+        - 2604912508670050304
+        - 2604982877414227968
+        - 2605053246158405632
+        - 2605123614902583296
+        - 2605193983646760960
+        - 2605264352416104448
+        - 2605334721135116288
         
 cluster:
     meanshift:
