--- a/uvva/uvva_cfg.yaml
+++ b/uvva/uvva_cfg.yaml
@@ -5,7 +5,7 @@ comment : "Example configuration file"
 general:
     name            : "TDS_COSMOS"
     out_dir_base    : "./examples/uvva_pipeline"                 # If "CWD" current work directory will be used.
-    log_level       : "INFO"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
+    log_level       : "DEBUG"                                    #["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "uvva.log"                                 # Will be written into "out_dir"
     hd_img_out      : true                                      # Write out high definition images
     nr_cpus         : 4                                       #Number of CPUs to use. If "null" all available are used.
@@ -65,7 +65,7 @@ selection:
             nr_ul_mean    : [1,.inf]
 
 ressources:                      
-    load_method      : "UVVA"     # Allowed are ["MAST_SERVER", "MAST_CLOUD", "UVVA", "AUTO"]
+    load_method      : "MAST_LOCAL"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "UVVA", "AUTO"]
     load_products    : true             # Get data products from MAST, if false only meta data is loaded
     field_kwargs:
         data_path        : null
