Changed upper limits cut

--- a/uvva/test/resources/uvva_test_cfg.yaml
+++ b/uvva/test/resources/uvva_test_cfg.yaml
@@ -55,9 +55,9 @@ selection:
         sel_type : "or"
         range:        
             mag_rchiq     : [1.0,.inf]
-            mag_dmax      : [0.2,.inf]
+#            mag_dmax      : [0.2,.inf]
             mag_dmax_sig  : [5.0,.inf]
-            nr_ul_mean    : [1,.inf]
+            perc_ul_mean    : [10,.inf]
 
 ressources:                      
     load_method      : "MAST_LOCAL"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "UVVA", "AUTO"]
