--- a/uvva/uvva_cfg.yaml
+++ b/uvva/uvva_cfg.yaml
@@ -41,7 +41,7 @@ selection:
         sel_type : "and"    # These are OR selections
         range:
             nr_det        : [1,.inf]
-            nr_det_meas   : [1,.inf]            
+            nr_uls   : [1,.inf]            
     src_variability:
         table    : "tt_sources"
         sel_type : "or"
@@ -49,7 +49,7 @@ selection:
             mag_rchiq     : [2.0,.inf]
 #            mag_dmax      : [0.2,.inf]
             mag_dmax_sig  : [5.0,.inf]
-            perc_ul_mean    : [10,.inf]
+            ul_weight    : [1.5,.inf]
 
 ressources:                      
     load_method      : "UVVA"     # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "UVVA", "AUTO"]
@@ -62,15 +62,15 @@ observations:
     observatory : "GALEX"
     obs_filter : "NUV"
     field_ids :
-        - 6388191295067652096
-        - 6381787756527353856
+        # - 6388191295067652096
+        # - 6381787756527353856
         - 2604912508670050304
-        # - 2604982877414227968
-        # - 2605053246158405632
-        # - 2605123614902583296
-        # - 2605193983646760960
-        # - 2605264352416104448
-        # - 2605334721135116288
+        - 2604982877414227968
+        - 2605053246158405632
+        - 2605123614902583296
+        - 2605193983646760960
+        - 2605264352416104448
+        - 2605334721135116288
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
